fix background overlapping forms

--- a/styles/style.css
+++ b/styles/style.css
@@ -658,14 +658,14 @@ main{
     min-height: 550px;
     max-height: 600px;
     overflow: auto;
-
     margin-top: 8px;
-
     border-radius: 10px;
     box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.25);
     box-sizing: border-box;
-
     overflow: hidden;
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
 }
 
 #home_section{
